fixed input alignment

--- a/extractor-app/keyword-extractor-frontend/src/styles.css
+++ b/extractor-app/keyword-extractor-frontend/src/styles.css
@@ -15,7 +15,7 @@
 }
 
 .input {
-  width: 100%;
+  width: 94%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
